Xext: fix missing include of <X11/Xmd.h>

Including <X11/extensions/securproto.h> depends on <X11/Xmd.h> has been
included before.

Bug: https://gitlab.freedesktop.org/xorg/xserver/-/issues/1719
Fixes: b30edf32 - fix missing includes of <X11/Xfuncproto.h>
Signed-off-by: Enrico Weigelt, metux IT consult <info@metux.net>
Part-of: <https://gitlab.freedesktop.org/xorg/xserver/-/merge_requests/1617>