Xext/security.c
@@ -28,6 +28,7 @@ in this Software without prior written authorization from The Open Group.
 #include <dix-config.h>
 #endif
 
+#include <X11/Xmd.h>
 #include <X11/extensions/securproto.h>
 #include <X11/Xfuncproto.h>
 
